Center the message icons and fix their spacing

--- a/wiki/htdocs/modern/css/common.css
+++ b/wiki/htdocs/modern/css/common.css
@@ -466,9 +466,21 @@ TD.tip {
     font-size: 1em;
     color: black;
 }
-#message .info:before {content: url('../img/icon-info.png'); margin: 0 0.2em;}
-#message .warning:before {content: url('../img/alert.png'); margin: 0 0.2em;}
-#message .error:before {content: url('../img/icon-error.png'); margin: 0 0.2em;}
+#message .info:before {
+    content: url('../img/icon-info.png');
+    margin: 0 0.5em 0 0.25em;
+    vertical-align: middle;
+}
+#message .warning:before {
+    content: url('../img/alert.png');
+    margin: 0 0.5em 0 0.125em;
+    vertical-align: middle;
+}
+#message .error:before {
+    content: url('../img/icon-error.png'); 
+    margin: 0 0.5em 0 0.125em;
+    vertical-align: middle;
+}
 
 
 /* admonition start */
